# pptx-rebuilder

./: .gitignore  README.md
.claude/: CLAUDE.md
backend/: main.py  pyproject.toml
frontend/: package.json
frontend/src/: App.jsx
tools/: bundle_repo.py
