[project]
name = "pptx-rebuilder-backend"
version = "0.1.0"
description = "Backend for converting image PPTX to editable PPTX using SAP Cloud SDK for AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    "sap-ai-sdk-gen[all]>=6.1.0",
    "python-pptx>=0.6.23",
    "pydantic>=2.6.4",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "easyocr>=1.7.2",
]
